--- a/bin/Dockerfile
+++ b/bin/Dockerfile
@@ -1,12 +1,19 @@
 FROM node:lts-alpine AS builder
+
 WORKDIR /app
+
 COPY package.json ./
-RUN npm install
+
+RUN npm install --production
+
 COPY . .
 
-
 FROM node:lts-alpine
+
 WORKDIR /app
+
 COPY --from=builder /app /app
-EXPOSE 5173
-CMD ["npm", "run", "dev"]
+
+EXPOSE 443
+
+CMD ["node", "server.js"]
