--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,10 @@
 services:
   wss-server:
     build:
-      context: .
+      context: ./bin
       dockerfile: Dockerfile
     ports:
       - "443:443"
-    volumes:
-      - ./localhost.crt:/app/localhost.crt:ro
-      - ./localhost.key:/app/localhost.key:ro
-      - ./bin:/app/bin
     environment:
       - NODE_ENV=production
       - PORT=443
