--- a/Dockerfile-app
+++ b/Dockerfile-app
@@ -2,7 +2,7 @@ FROM node:lts-alpine AS builder
 WORKDIR /app
 COPY package.json ./
 RUN npm install
-COPY . .
+COPY ./src .
 
 
 FROM node:lts-alpine
