--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/node": "^22.10.5",
     "@types/uuid": "^9.0.8",
+    "@webaudiomodules/api": "^2.0.0-alpha.6",
     "typescript": "^5.2.2",
     "vite": "^5.1.6"
   },
@@ -18,6 +20,7 @@
     "@babylonjs/gui": "^6.48.0",
     "@babylonjs/inspector": "^6.49.0",
     "@babylonjs/loaders": "^6.48.0",
+    "@webaudiomodules/sdk": "^0.0.12",
     "tone": "^14.7.77",
     "uuid": "^9.0.1",
     "ws": "^8.16.0",
