--- a/src/menuConfig.json
+++ b/src/menuConfig.json
@@ -29,6 +29,19 @@
           }
           
         ]
+    },
+    {
+        "name": "Instruments",
+        "plugins": [
+          {
+            "name": "Spectrum Modal",
+            "configFile": "spectrumModalConfig"
+          },
+          {
+            "name": "Random Note",
+            "configFile": "randomNoteConfig"
+          }
+        ]
     }
   ]
 }
