:construction: WIP MERGE

--- a/server-config/public/wamsConfig/randomNoteConfig.json
+++ b/server-config/public/wamsConfig/randomNoteConfig.json
@@ -1,5 +1,5 @@
 {
-  "name": "randomNote",
+  "name": "Random Note",
   "url": "https://mainline.i3s.unice.fr/wam2/packages/randomnote/index.js",
   "root": "",
   "customParameters": [
