--- a/src/wamsConfig/randomNoteConfig.json
+++ b/src/wamsConfig/randomNoteConfig.json
@@ -1,5 +1,5 @@
 {
-  "name": "randomNote",
+  "name": "Random Note",
   "url": "https://mainline.i3s.unice.fr/wam2/packages/randomnote/index.js",
   "root": "",
   "customParameters": [
