--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@webaudiomodules/sdk": "^0.0.12",
     "tone": "^14.7.77",
     "uuid": "^9.0.1",
+    "wam3dgenerator": "github:Jempasam/3d_wam_editor",
     "ws": "^8.16.0",
     "y-webrtc": "^10.3.0",
     "yjs": "^13.6.14"
