--- a/src/menuConfig.json
+++ b/src/menuConfig.json
@@ -4,6 +4,10 @@
       "name": "Effects",
         "plugins": [
           {
+            "name": "KVerb",
+            "configFile": "reverbConfig"
+          },
+          {
             "name": "Big Muff",
             "configFile": "bigMuffConfig"
           },
