:sparkles: Ajout WamSampler3D avec Note et Pattern extension

--- a/src/menuConfig.json
+++ b/src/menuConfig.json
@@ -40,6 +40,10 @@
           {
             "name": "Random Note",
             "configFile": "randomNoteConfig"
+          },
+          {
+            "name" : "Wam Sampler",
+            "configFile": "wamSamplerConfig"
           }
         ]
     }
