--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@babylonjs/core": "^6.48.0",
     "@babylonjs/gui": "^6.48.0",
+    "@babylonjs/havok": "^1.3.10",
     "@babylonjs/inspector": "^6.49.0",
     "@babylonjs/loaders": "^6.48.0",
     "@webaudiomodules/sdk": "^0.0.12",
