--- a/server-config/public/wamsConfig/reverbConfig.json
+++ b/server-config/public/wamsConfig/reverbConfig.json
@@ -2,52 +2,38 @@
   "name": "KVerb",
   "wam3d": {
     "aspect_ratio": 0.7,
-    "bottom_color": "#c98005",
-    "top_color": "#eccf02",
+    "size": 1.0,
+    "bottom_color": "#ffee55",
+    "top_color": "#dfc00f",
+    "face": "https://www.webaudiomodules.com/community/plugins/wimmics/kbverb/default.png",
     "controls": [
       {
-        "x": 0.27500704104845203,
-        "y": 0.087499,
-        "width": 0.4374368740822464,
-        "height": 0.4375,
+        "x": 0.3249957047782376,
+        "y": 0.021874999999999995,
+        "width": 0.3281292952217626,
+        "height": 0.32499999999999996,
         "values": {
           "Base Color": "#222222",
-          "Cursor Color": "#e3b835",
+          "Cursor Color": "#a78212",
           "Target": "/kbverb/feedback"
         },
         "control": "cursor_control"
       },
       {
-        "x": 0.38439100937315684,
-        "y": 0.7593526258504807,
-        "width": 0.2468737140412005,
-        "height": 0.2218552619030265,
-        "values": {
-          "Text": "KBVerb",
-          "Color": "#000000",
-          "Font": "rich_eatin"
-        },
-        "control": "text"
+        "x": 0.7437499999999999,
+        "y": 0.3468502296728373,
+        "width": 0.25625000000000003,
+        "height": 0.25624999999999987,
+        "values": { "Color": "#FF0000" },
+        "control": "output_control"
       },
       {
         "x": 0,
-        "y": 0.550128966822399,
-        "width": 0.25312500000000004,
-        "height": 0.24062500000000003,
-        "values": {
-          "Color": "#00FF00"
-        },
+        "y": 0.32813252270419535,
+        "width": 0.29375,
+        "height": 0.28124999999999983,
+        "values": { "Color": "#00FF00" },
         "control": "input_control"
-      },
-      {
-        "x": 0.7531001071890189,
-        "y": 0.550128966822399,
-        "width": 0.2468998928109811,
-        "height": 0.2406293401573381,
-        "values": {
-          "Color": "#FF0000"
-        },
-        "control": "output_control"
       }
     ],
     "wam_url": "https://www.webaudiomodules.com/community/plugins/wimmics/kbverb/index.js"
