MIDI Support for Wam3DEditor nodes

--- a/server-config/public/wamsConfig/modalConfig.json
+++ b/server-config/public/wamsConfig/modalConfig.json
@@ -2,7 +2,7 @@
   "name": "Modal",
   "wam3d": {
     "aspect_ratio": 0.9,
-    "size": 1,
+    "size": 0.9,
     "bottom_color": "#96adbe",
     "top_color": "#467ea8",
     "controls": [
@@ -43,8 +43,8 @@
         "control": "color_control"
       },
       {
-        "x": 0.08874999984971678,
-        "y": 0.05405475125120962,
+        "x": 0.10749999892381944,
+        "y": 0.0509295315844626,
         "width": 0.14375000000000002,
         "height": 0.140625,
         "values": {
@@ -55,8 +55,8 @@
         "control": "color_control"
       },
       {
-        "x": 0.6843616488844867,
-        "y": 0.7718750009960044,
+        "x": 0.6156047903150587,
+        "y": 0.7343750030502636,
         "width": 0.15312499999999998,
         "height": 0.15000000000000005,
         "values": {
@@ -67,8 +67,8 @@
         "control": "cursor_control"
       },
       {
-        "x": 0.23687499984971677,
-        "y": 0.045919323726292115,
+        "x": 0.25249999892381947,
+        "y": 0.04592026267342482,
         "width": 0.14375000000000002,
         "height": 0.140625,
         "values": {
@@ -79,8 +79,8 @@
         "control": "color_control"
       },
       {
-        "x": 0.3774999998497168,
-        "y": 0.049045482340171836,
+        "x": 0.4024999989238195,
+        "y": 0.04904642022688088,
         "width": 0.14375000000000002,
         "height": 0.140625,
         "values": {
@@ -91,8 +91,8 @@
         "control": "color_control"
       },
       {
-        "x": 0.5243749998497168,
-        "y": 0.045919323726292115,
+        "x": 0.5431249989238195,
+        "y": 0.04279410405954509,
         "width": 0.14375000000000002,
         "height": 0.140625,
         "values": {
@@ -103,8 +103,8 @@
         "control": "color_control"
       },
       {
-        "x": 0.6793531446672673,
-        "y": 0.6106250009960044,
+        "x": 0.6105962860978392,
+        "y": 0.5731250030502635,
         "width": 0.15312499999999998,
         "height": 0.15000000000000005,
         "values": {
@@ -115,8 +115,8 @@
         "control": "cursor_control"
       },
       {
-        "x": 0.6774706966606034,
-        "y": 0.4431250009960044,
+        "x": 0.6087138380911754,
+        "y": 0.4056250030502635,
         "width": 0.15312499999999998,
         "height": 0.15000000000000005,
         "values": {
@@ -127,8 +127,8 @@
         "control": "cursor_control"
       },
       {
-        "x": 0.17187789638510037,
-        "y": 0.31247500202611883,
+        "x": 0.2500065168664759,
+        "y": 0.3249756054453639,
         "width": 0.16875,
         "height": 0.16562499999999997,
         "values": {
@@ -139,8 +139,8 @@
         "control": "grow_control"
       },
       {
-        "x": 0.1731278963851004,
-        "y": 0.5106560201131823,
+        "x": 0.25125651686647593,
+        "y": 0.5231566235324273,
         "width": 0.16875,
         "height": 0.16562499999999997,
         "values": {
@@ -151,8 +151,8 @@
         "control": "grow_control"
       },
       {
-        "x": 0.35559510106183645,
-        "y": 0.3087111873816603,
+        "x": 0.433723721543212,
+        "y": 0.3212117908009054,
         "width": 0.16874999999999998,
         "height": 0.16562499999999997,
         "values": {
@@ -163,8 +163,8 @@
         "control": "grow_control"
       },
       {
-        "x": 0.3568422073568427,
-        "y": 0.5037662722095106,
+        "x": 0.4349708278382183,
+        "y": 0.5162668756287557,
         "width": 0.16874999999999998,
         "height": 0.165625,
         "values": {
@@ -175,16 +175,44 @@
         "control": "grow_control"
       },
       {
-        "x": 0.6437147431592571,
-        "y": 0.17812499999999998,
-        "width": 0.2531378206693611,
-        "height": 0.23125000000000012,
+        "x": 0.6093309136361098,
+        "y": 0.159375,
+        "width": 0.23750881421018577,
+        "height": 0.23437500000000014,
         "values": {
           "Base Color": "#222222",
           "Cursor Color": "#ffec00",
           "Target": "resonatorModel"
         },
         "control": "cursor_control"
+      },
+      {
+        "x": 0,
+        "y": 0.36875,
+        "width": 0.246875,
+        "height": 0.2375000000000001,
+        "values": { "Color": "#33BB88" },
+        "control": "midi_input_control"
+      },
+      {
+        "x": 0.3125005560814383,
+        "y": 0.20937011799725339,
+        "width": 0.13127335542040547,
+        "height": 0.11249823660101457,
+        "values": {
+          "Text": "Modal",
+          "Color": "#000000",
+          "Font": "dogicapixel"
+        },
+        "control": "text"
+      },
+      {
+        "x": 0.7937500000000001,
+        "y": 0.39375000000000004,
+        "width": 0.20624999999999993,
+        "height": 0.19687500000000002,
+        "values": { "Color": "#FF0000" },
+        "control": "output_control"
       }
     ],
     "wam_url": "https://www.webaudiomodules.com/community/plugins/burns-audio/modal/index.js"
