New Wam Sequencer GUI

--- a/src/Refactoring/xr/menuConfig.json
+++ b/src/Refactoring/xr/menuConfig.json
@@ -3,7 +3,8 @@
     {
       "name": "Generator",
       "plugins": [
-        { "name": "Oscillator", "kind": "oscillator" }
+        { "name": "Oscillator", "kind": "oscillator" },
+        { "name": "Sequencer", "kind": "sequencer" }
       ]
     },
     {
