--- a/src/Refactoring/xr/menuConfig.json
+++ b/src/Refactoring/xr/menuConfig.json
@@ -4,7 +4,9 @@
       "name": "Generator",
       "plugins": [
         { "name": "Oscillator", "kind": "oscillator" },
-        { "name": "Sequencer", "kind": "sequencer" }
+        { "name": "Sequencer", "kind": "sequencer" },
+        { "name": "Piano Roll", "kind": "pianoroll" }
+
       ]
     },
     {
