--- a/Dockerfile-app
+++ b/Dockerfile-app
@@ -1,12 +1,19 @@
 FROM node:lts-alpine AS builder
 WORKDIR /app
-COPY package.json ./
-RUN npm install
-COPY ./src .
 
+COPY package*.json ./
+RUN npm ci
+
+COPY . .
+
+RUN npx vite build
 
 FROM node:lts-alpine
 WORKDIR /app
-COPY --from=builder /app /app
+
+COPY --from=builder /app/node_modules ./node_modules
+COPY --from=builder /app/dist ./dist
+COPY --from=builder /app/package*.json ./
+
 EXPOSE 5173
-CMD ["npm", "run", "dev"]
+CMD ["npx", "vite", "preview", "--host", "0.0.0.0", "--port", "5173"]
