--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,3 +14,9 @@ services:
       dockerfile: Dockerfile
     ports:
         - "3000:3000"
+  app:
+    build:
+      context: ./
+      dockerfile: Dockerfile-app
+    ports:
+      - "5173:5173"
