--- a/Dockerfile-app
+++ b/Dockerfile-app
@@ -1,19 +1,16 @@
 FROM node:lts-alpine AS builder
 WORKDIR /app
-
+RUN apk add --no-cache git
 COPY package*.json ./
-RUN npm ci
-
+RUN npm install
 COPY . .
-
 RUN npx vite build
 
 FROM node:lts-alpine
 WORKDIR /app
-
 COPY --from=builder /app/node_modules ./node_modules
 COPY --from=builder /app/dist ./dist
 COPY --from=builder /app/package*.json ./
-
+COPY --from=builder /app/vite.config.js ./
 EXPOSE 5173
 CMD ["npx", "vite", "preview", "--host", "0.0.0.0", "--port", "5173"]
