Rotate and Hodl behaviour correction; TakableBehavior; Drum instrument; Some NoteBoxN3D synchronisation tests

--- a/src/Refactoring/xr/menuConfig.json
+++ b/src/Refactoring/xr/menuConfig.json
@@ -21,7 +21,8 @@
           { "name": "Flute", "kind": "flute" },
           { "name": "Guitar", "kind": "guitar" },
           { "name": "Modal", "kind": "modal" },
-          { "name": "Tiny54", "kind": "tiny54" }
+          { "name": "Tiny54", "kind": "tiny54" },
+          { "name": "Drum", "kind": "drum" }
         ]
     },
     {
