--- a/src/Refactoring/xr/menuConfig.json
+++ b/src/Refactoring/xr/menuConfig.json
@@ -12,9 +12,9 @@
     {
       "name": "Effects",
       "plugins": [
-        { "name": "Disto Machine", "kind": "disto_machine" },
-        { "name": "Vox Amp 30", "kind": "voxamp" },
-        { "name": "KVerb", "kind": "kverb" },
+        { "name": "Disto Machine", "kind": "wam3d-Disto Machine" },
+        { "name": "Vox Amp 30", "kind": "wam3d-Vox Amp 30" },
+        { "name": "KVerb", "kind": "wam3d-KVerb" },
         { "name": "Big Muff", "kind": "wam3d-Big Muff"},
         { "name": "Grey Hole", "kind": "wam3d-Grey Hole"},
         { "name": "Ping Pong Delay", "kind": "wam3d-Ping Pong Delay"}
@@ -23,13 +23,12 @@
     {
       "name": "Instruments",
         "plugins": [
-          { "name": "Flute", "kind": "flute" },
-          { "name": "Guitar", "kind": "guitar" },
-          { "name": "Modal", "kind": "modal" },
-          { "name": "Tiny54", "kind": "tiny54" },
-          { "name": "Drum", "kind": "drum" },
-          { "name": "Tiny Synth", "kind": "wam3d-Tiny Synth"},
-          { "name": "drum Sampler", "kind": "drumsampler"}
+          { "name": "Flute", "kind": "wam3d-Faust Flute" },
+          { "name": "Guitar", "kind": "wam3d-FAUST Guitar" },
+          { "name": "Modal", "kind": "wam3d-Modal" },
+          { "name": "Micro54", "kind": "wam3d-Micro 54" },
+          { "name": "Drum", "kind": "wam3d-Drum" },
+          { "name": "Tiny Synth", "kind": "wam3d-Tiny Synth"}
         ]
     },
     {
